[gd_scene load_steps=4 format=2]

[ext_resource path="res://source/old_ui/subcomponents/slots/shop_slot/ShoppingSlot.tscn" type="PackedScene" id=1]
[ext_resource path="res://source/old_ui/shop/Shop.gd" type="Script" id=2]
[ext_resource path="res://assets/stylebox/panel.tres" type="StyleBox" id=3]

[node name="Shop" type="PanelContainer"]
margin_right = 14.0
margin_bottom = 14.0
size_flags_horizontal = 6
size_flags_vertical = 6
custom_styles/panel = ExtResource( 3 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_left = 3.0
margin_top = 3.0
margin_right = 335.0
margin_bottom = 131.0

[node name="BuyGrid" type="GridContainer" parent="HBoxContainer"]
margin_right = 160.0
margin_bottom = 128.0
size_flags_horizontal = 5
size_flags_vertical = 5
custom_constants/vseparation = 0
custom_constants/hseparation = 0
columns = 5

[node name="ShoppingSlot" parent="HBoxContainer/BuyGrid" instance=ExtResource( 1 )]

[node name="ShoppingSlot2" parent="HBoxContainer/BuyGrid" instance=ExtResource( 1 )]
margin_left = 32.0
margin_right = 64.0

[node name="ShoppingSlot3" parent="HBoxContainer/BuyGrid" instance=ExtResource( 1 )]
margin_left = 64.0
margin_right = 96.0

[node name="ShoppingSlot4" parent="HBoxContainer/BuyGrid" instance=ExtResource( 1 )]
margin_left = 96.0
margin_right = 128.0

[node name="ShoppingSlot5" parent="HBoxContainer/BuyGrid" instance=ExtResource( 1 )]
margin_left = 128.0
margin_right = 160.0

[node name="ShoppingSlot6" parent="HBoxContainer/BuyGrid" instance=ExtResource( 1 )]
margin_top = 32.0
margin_bottom = 64.0

[node name="ShoppingSlot7" parent="HBoxContainer/BuyGrid" instance=ExtResource( 1 )]
margin_left = 32.0
margin_top = 32.0
margin_right = 64.0
margin_bottom = 64.0

[node name="ShoppingSlot8" parent="HBoxContainer/BuyGrid" instance=ExtResource( 1 )]
margin_left = 64.0
margin_top = 32.0
margin_right = 96.0
margin_bottom = 64.0

[node name="ShoppingSlot9" parent="HBoxContainer/BuyGrid" instance=ExtResource( 1 )]
margin_left = 96.0
margin_top = 32.0
margin_right = 128.0
margin_bottom = 64.0

[node name="ShoppingSlot10" parent="HBoxContainer/BuyGrid" instance=ExtResource( 1 )]
margin_left = 128.0
margin_top = 32.0
margin_right = 160.0
margin_bottom = 64.0

[node name="ShoppingSlot11" parent="HBoxContainer/BuyGrid" instance=ExtResource( 1 )]
margin_top = 64.0
margin_bottom = 96.0

[node name="ShoppingSlot12" parent="HBoxContainer/BuyGrid" instance=ExtResource( 1 )]
margin_left = 32.0
margin_top = 64.0
margin_right = 64.0
margin_bottom = 96.0

[node name="ShoppingSlot13" parent="HBoxContainer/BuyGrid" instance=ExtResource( 1 )]
margin_left = 64.0
margin_top = 64.0
margin_right = 96.0
margin_bottom = 96.0

[node name="ShoppingSlot14" parent="HBoxContainer/BuyGrid" instance=ExtResource( 1 )]
margin_left = 96.0
margin_top = 64.0
margin_right = 128.0
margin_bottom = 96.0

[node name="ShoppingSlot15" parent="HBoxContainer/BuyGrid" instance=ExtResource( 1 )]
margin_left = 128.0
margin_top = 64.0
margin_right = 160.0
margin_bottom = 96.0

[node name="ShoppingSlot16" parent="HBoxContainer/BuyGrid" instance=ExtResource( 1 )]
margin_top = 96.0
margin_bottom = 128.0

[node name="ShoppingSlot17" parent="HBoxContainer/BuyGrid" instance=ExtResource( 1 )]
margin_left = 32.0
margin_top = 96.0
margin_right = 64.0
margin_bottom = 128.0

[node name="ShoppingSlot18" parent="HBoxContainer/BuyGrid" instance=ExtResource( 1 )]
margin_left = 64.0
margin_top = 96.0
margin_right = 96.0
margin_bottom = 128.0

[node name="ShoppingSlot19" parent="HBoxContainer/BuyGrid" instance=ExtResource( 1 )]
margin_left = 96.0
margin_top = 96.0
margin_right = 128.0
margin_bottom = 128.0

[node name="ShoppingSlot20" parent="HBoxContainer/BuyGrid" instance=ExtResource( 1 )]
margin_left = 128.0
margin_top = 96.0
margin_right = 160.0
margin_bottom = 128.0

[node name="VSeparator" type="VSeparator" parent="HBoxContainer"]
margin_left = 164.0
margin_right = 168.0
margin_bottom = 128.0

[node name="SellGrid" type="GridContainer" parent="HBoxContainer"]
margin_left = 172.0
margin_right = 332.0
margin_bottom = 128.0
size_flags_horizontal = 5
size_flags_vertical = 5
custom_constants/vseparation = 0
custom_constants/hseparation = 0
columns = 5

[node name="ShoppingSlot" parent="HBoxContainer/SellGrid" instance=ExtResource( 1 )]

[node name="ShoppingSlot2" parent="HBoxContainer/SellGrid" instance=ExtResource( 1 )]
margin_left = 32.0
margin_right = 64.0

[node name="ShoppingSlot3" parent="HBoxContainer/SellGrid" instance=ExtResource( 1 )]
margin_left = 64.0
margin_right = 96.0

[node name="ShoppingSlot4" parent="HBoxContainer/SellGrid" instance=ExtResource( 1 )]
margin_left = 96.0
margin_right = 128.0

[node name="ShoppingSlot5" parent="HBoxContainer/SellGrid" instance=ExtResource( 1 )]
margin_left = 128.0
margin_right = 160.0

[node name="ShoppingSlot6" parent="HBoxContainer/SellGrid" instance=ExtResource( 1 )]
margin_top = 32.0
margin_bottom = 64.0

[node name="ShoppingSlot7" parent="HBoxContainer/SellGrid" instance=ExtResource( 1 )]
margin_left = 32.0
margin_top = 32.0
margin_right = 64.0
margin_bottom = 64.0

[node name="ShoppingSlot8" parent="HBoxContainer/SellGrid" instance=ExtResource( 1 )]
margin_left = 64.0
margin_top = 32.0
margin_right = 96.0
margin_bottom = 64.0

[node name="ShoppingSlot9" parent="HBoxContainer/SellGrid" instance=ExtResource( 1 )]
margin_left = 96.0
margin_top = 32.0
margin_right = 128.0
margin_bottom = 64.0

[node name="ShoppingSlot10" parent="HBoxContainer/SellGrid" instance=ExtResource( 1 )]
margin_left = 128.0
margin_top = 32.0
margin_right = 160.0
margin_bottom = 64.0

[node name="ShoppingSlot11" parent="HBoxContainer/SellGrid" instance=ExtResource( 1 )]
margin_top = 64.0
margin_bottom = 96.0

[node name="ShoppingSlot12" parent="HBoxContainer/SellGrid" instance=ExtResource( 1 )]
margin_left = 32.0
margin_top = 64.0
margin_right = 64.0
margin_bottom = 96.0

[node name="ShoppingSlot13" parent="HBoxContainer/SellGrid" instance=ExtResource( 1 )]
margin_left = 64.0
margin_top = 64.0
margin_right = 96.0
margin_bottom = 96.0

[node name="ShoppingSlot14" parent="HBoxContainer/SellGrid" instance=ExtResource( 1 )]
margin_left = 96.0
margin_top = 64.0
margin_right = 128.0
margin_bottom = 96.0

[node name="ShoppingSlot15" parent="HBoxContainer/SellGrid" instance=ExtResource( 1 )]
margin_left = 128.0
margin_top = 64.0
margin_right = 160.0
margin_bottom = 96.0

[node name="ShoppingSlot16" parent="HBoxContainer/SellGrid" instance=ExtResource( 1 )]
margin_top = 96.0
margin_bottom = 128.0

[node name="ShoppingSlot17" parent="HBoxContainer/SellGrid" instance=ExtResource( 1 )]
margin_left = 32.0
margin_top = 96.0
margin_right = 64.0
margin_bottom = 128.0

[node name="ShoppingSlot18" parent="HBoxContainer/SellGrid" instance=ExtResource( 1 )]
margin_left = 64.0
margin_top = 96.0
margin_right = 96.0
margin_bottom = 128.0

[node name="ShoppingSlot19" parent="HBoxContainer/SellGrid" instance=ExtResource( 1 )]
margin_left = 96.0
margin_top = 96.0
margin_right = 128.0
margin_bottom = 128.0

[node name="ShoppingSlot20" parent="HBoxContainer/SellGrid" instance=ExtResource( 1 )]
margin_left = 128.0
margin_top = 96.0
margin_right = 160.0
margin_bottom = 128.0
